testsuite/tests/properties/invalid_generics/entity.lkt
import common

class ExampleSeq: FooNode {
    @parse_field items: ASTList[Example]

    @exported fun p(@ignored e: Entity[Int]): Bool = true
}
